--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="add_students_floating_button">add students floating button</string>
     <string name="assessment">Assessment</string>
     <string name="search_student">Search student...</string>
+    <string name="o_level">O\'Level</string>
+    <string name="a_level">A\'Level</string>
 
     <string-array name="subjects_array">
         <!-- A-Level Subjects -->
@@ -116,6 +118,8 @@
         <item>Senior Six</item>
         <!-- Add more classes as needed -->
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
