--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,12 +110,12 @@
 
 
     <string-array name="classes_array">
-        <item>Senior one</item>
-        <item>Senior Two</item>
-        <item>Senior Three</item>
-        <item>Senior Four</item>
-        <item>Senior Five</item>
-        <item>Senior Six</item>
+        <item>senior one</item>
+        <item>senior two</item>
+        <item>senior three</item>
+        <item>senior four</item>
+        <item>senior five</item>
+        <item>senior six</item>
         <!-- Add more classes as needed -->
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
@@ -137,6 +137,7 @@
     <string name="menu_icon">menu icon</string>
     <string name="student_id">Student Id :</string>
     <string name="subject_s">Subject(s):</string>
+    <string name="you_have_no_results_at_the_moment">You have no results at the moment</string>
 
 
 </resources>
